--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 package-lock.json
-.env
 
 # dependencies
 /node_modules
@@ -13,6 +12,7 @@ package-lock.json
 
 # next.js
 /.next/
+/next.config.js
 /out/
 
 # production
