--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@types/uuid": "^9.0.0",
+    "@vercel/analytics": "^0.1.8",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
