--- a/package.json
+++ b/package.json
@@ -10,23 +10,28 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
-    "@types/node": "18.11.18",
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@types/uuid": "^9.0.0",
     "@vercel/analytics": "^0.1.8",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "joi": "^17.7.0",
+    "mongodb": "^4.13.0",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.4",
+    "swr": "^2.0.1",
     "typescript": "4.9.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "@types/styled-components": "^5.1.26",
     "babel-plugin-styled-components": "^2.0.7"
   }
