--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
+    "sharp": "^0.31.3",
     "styled-components": "^5.3.6",
     "styled-reset": "^4.4.4",
     "swr": "^2.0.1",
