--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-db_cluster=Cluster0
-db_name=dev
-db_user=test_user
-db_pwd=A84a4oLF6k8FVm5S
+DB_CLUSTER=Cluster0
+DB_NAME=todays_link
+DB_USER=production_user
+DB_PWD=EYWHO4a22gzqRfog
