--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@types/node": "^18.11.18",
     "@types/styled-components": "^5.1.26",
+    "@types/validator": "^13.7.11",
     "babel-plugin-styled-components": "^2.0.7"
   }
 }
