--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.2.6",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "firebase": "^9.17.1",
     "joi": "^17.7.0",
     "mongodb": "^4.13.0",
     "next": "13.1.1",
