--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,8 @@
-  apiKey:AIzaSyCfCItaio445G2otC9_IdthuHKzZhpyxSU
-  authDomain:todays-link.firebaseapp.com
-  databaseURL:https://todays-link-default-rtdb.asia-southeast1.firebasedatabase.app
-  projectId:todays-link
-  storageBucket:todays-link.appspot.com
-  messagingSenderId:10681271061
-  appId:1:10681271061:web:99bb6fda18277f71161f1c
-  measurementId:G-FMBB4NBQPS
+  apiKey=AIzaSyCfCItaio445G2otC9_IdthuHKzZhpyxSU
+  authDomain=todays-link.firebaseapp.com
+  databaseURL=https://todays-link-default-rtdb.asia-southeast1.firebasedatabase.app
+  projectId=todays-link
+  storageBucket=todays-link.appspot.com
+  messagingSenderId=10681271061
+  appId=1:10681271061:web:99bb6fda18277f71161f1c
+  measurementId=G-FMBB4NBQPS
