--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,8 @@
-  apiKey=AIzaSyCfCItaio445G2otC9_IdthuHKzZhpyxSU
-  authDomain=todays-link.firebaseapp.com
-  databaseURL=https://todays-link-default-rtdb.asia-southeast1.firebasedatabase.app
-  projectId=todays-link
-  storageBucket=todays-link.appspot.com
-  messagingSenderId=10681271061
-  appId=1:10681271061:web:99bb6fda18277f71161f1c
-  measurementId=G-FMBB4NBQPS
+NEXT_PUBLIC_apiKey=AIzaSyCfCItaio445G2otC9_IdthuHKzZhpyxSU
+NEXT_PUBLIC_authDomain=todays-link.firebaseapp.com
+NEXT_PUBLIC_databaseURL=https://todays-link-default-rtdb.asia-southeast1.firebasedatabase.app
+NEXT_PUBLIC_projectId=todays-link
+NEXT_PUBLIC_storageBucket=todays-link.appspot.com
+NEXT_PUBLIC_messagingSenderId=10681271061
+NEXT_PUBLIC_appId=1:10681271061:web:99bb6fda18277f71161f1c
+NEXT_PUBLIC_measurementId=G-FMBB4NBQPS
