--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.1",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/randomstring": "^1.1.8",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@types/uuid": "^9.0.0",
@@ -22,6 +23,8 @@
     "firebase": "^9.17.1",
     "joi": "^17.7.0",
     "next": "13.1.1",
+    "nodemailer": "^6.9.1",
+    "randomstring": "^1.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
@@ -36,6 +39,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/node": "^18.11.18",
+    "@types/nodemailer": "^6.4.7",
     "@types/styled-components": "^5.1.26",
     "@types/validator": "^13.7.11",
     "babel-plugin-styled-components": "^2.0.7"
