--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^9.17.1",
     "joi": "^17.7.0",
     "next": "13.1.1",
+    "next-auth": "^4.19.2",
     "nodemailer": "^6.9.1",
     "randomstring": "^1.2.3",
     "react": "18.2.0",
