--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
+    "react-loading-skeleton": "^3.2.0",
     "react-redux": "^8.0.5",
     "sharp": "^0.31.3",
     "styled-components": "^5.3.6",
